[package]
name = "esox_objectpool"
version = "1.0.0"
edition = "2024"
authors = ["Iede Snoek <info@esoxsolutions.nl>"]
description = "High-performance, thread-safe object pool with async support, metrics, and advanced features"
documentation="https://docs.rs/objectpool"
homepage="https://github.com/snoekiede/Esox.Rust.ObjectPool"
repository="https://github.com/snoekiede/Esox.Rust.ObjectPool"
license = "MIT"
keywords = ["pool", "object-pool", "async", "threading", "performance"]
categories = ["concurrency", "asynchronous", "caching"]
exclude=[
    ".github/*",
    "examples/*",
    "tests/*",
]

[dependencies]
tokio = { version = "1.42", features = ["full"] }
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "6.1"
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
prometheus = { version = "0.13", optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = ["metrics"]
metrics = ["serde", "prometheus"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "async_usage"
path = "examples/async_usage.rs"

[[example]]
name = "advanced"
path = "examples/advanced.rs"
