[package]
name = "esox_objectpool"
version = "1.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Iede Snoek <info@esoxsolutions.nl>"]
description = "High-performance, thread-safe object pool with async support, circuit breaker, eviction, health monitoring and Prometheus metrics"
documentation = "https://docs.rs/esox_objectpool"
homepage = "https://github.com/snoekiede/Esox.Rust.ObjectPool"
repository = "https://github.com/snoekiede/Esox.Rust.ObjectPool"
license = "MIT"
readme = "README.md"
keywords = ["pool", "object-pool", "async", "concurrency", "performance"]
categories = ["concurrency", "asynchronous", "caching"]
exclude = [
    ".idea/",
    ".github/",
    "*.md.bak",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
dashmap = "6"
thiserror = "2"

[dev-dependencies]
criterion = "0.5"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "async_usage"
path = "examples/async_usage.rs"

[[example]]
name = "advanced"
path = "examples/advanced.rs"
